# nanda-correction-surface

./: .dockerignore  .gitignore  CITATION.cff  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
agent/: app.py
client/: console.py  resolver.py
demo/: _common.py  contest.py  exit.py  register.py  registrations.py  resolve.py  revoke.py  run_all.py  run_local.sh  spoof.py  tamper.py
docs/: a2a-mapping.md  design-note.md  diagrams.md
explorer/: app.py  build_static.py  trace.py
explorer/static/: index.html
explorer/static/data/: contest.json  exit.json  privacy.json  resolve.json  scenarios.json  spoof.json  tamper.json
facts/: app.py
index/: app.py
issuer/: __init__.py  issue.py
nanda_core/: __init__.py  a2a.py  canonical.py  config.py  contest.py  crypto.py  didkey.py  keystore.py  models.py  severance.py  trust.py  vc.py
schemas/: agentaddr.schema.json  agentfacts-subject.schema.json  contestation.schema.json  export_schemas.py  facts-bundle.schema.json  interaction-receipt.schema.json
tests/: test_a2a.py  test_agent.py  test_agentaddr.py  test_contest.py  test_core.py  test_explorer.py  test_facts.py  test_index.py  test_resolver.py  test_severance.py  test_vc.py
