[project]
name = "nanda-index-prototype"
version = "0.1.0"
description = "A runnable prototype of the NANDA Index + Verified AgentFacts resolution flow (arXiv:2507.14263), with a contestation extension."
authors = [{ name = "Anivar Aravind", email = "ping@anivar.net" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.138.0",
    "uvicorn[standard]==0.49.0",
    "cryptography==49.0.0",
    "PyJWT==2.13.0",
    "rfc8785==0.1.4",
    "base58==2.1.1",
    "httpx==0.28.1",
    "pydantic==2.13.4",
]

[tool.setuptools]
packages = ["nanda_core", "index", "facts", "agent", "client", "demo"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
