[project]
name = "nanda-index-prototype"
version = "0.1.0"
description = "A runnable prototype of the NANDA Index + Verified AgentFacts resolution flow (arXiv:2507.14263), with a contestation extension."
authors = [{ name = "Anivar Aravind", email = "ping@anivar.net" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "cryptography>=44",       # Ed25519 (PyCA, Rust-backed)
    "PyJWT>=2.10",            # JWT-VC (vc-jose-cose), EdDSA
    "rfc8785>=0.1.4",         # RFC 8785 JSON Canonicalisation (Trail of Bits)
    "base58>=2.1",            # did:key multibase (base58btc)
    "httpx>=0.28",            # resolver client
    "pydantic>=2.10",         # schema models
]

[dependency-groups]
dev = ["pytest>=8", "ruff>=0.10"]

[tool.uv]
package = false               # this is an application, not a distributable library

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    # starlette's TestClient warns that httpx is "deprecated" in favour of httpx2;
    # acknowledged here (by message) so a future -W error run does not break the
    # integration tests.
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
